# RAGonite

./: .gitignore  LICENSE  README.md
wsdm25-confluence/: README.md  pyproject.toml
wsdm25-confluence/confquestions/: README.md  eval.py  qa-pairs.json
wsdm25-confluence/confquestions/documents/: confluence-002.json  confluence-003.json  confluence-007.json  confluence-009.json  confluence-010.json  confluence-012.json  confluence-013.json  confluence-014.json  confluence-015.json  confluence-023.json  confluence-024.json  confluence-027.json  confluence-029.json  confluence-031.json  confluence-033.json  confluence-035.json  (+70 more)
wsdm25-confluence/data/: README.md  confluence-001.json  confluence-004.json  confluence-005.json  confluence-006.json  confluence-008.json  confluence-011.json  confluence-016.json  confluence-017.json  confluence-018.json  confluence-019.json  confluence-020.json  confluence-021.json  confluence-022.json  confluence-025.json  confluence-026.json  confluence-028.json  confluence-030.json  confluence-032.json  confluence-034.json  confluence-036.json  confluence-037.json  confluence-039.json  confluence-041.json  confluence-042.json  confluence-043.json  confluence-044.json  confluence-046.json  confluence-049.json  confluence-050.json  confluence-052.json  confluence-053.json  confluence-054.json  confluence-057.json  confluence-058.json  confluence-059.json  confluence-061.json  confluence-063.json  confluence-064.json  confluence-065.json  (+91 more)
wsdm25-confluence/src/: README.md  attribution.py  note.txt  prepare.py  rag.py  start_rag.py  utils.py
(+23 files in other folders)
