[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RAGonite"
version = "0.1.0"
description = "A brief description."
authors = [
    { name = "Saha Roy, Rishiray", email = "rishiraj.saha.roy@iis.fraunhofer.de" },
    { name = "Schlotthauer, Joel", email = "joel.schlotthauer@iis.fraunhofer.de" },
    { name = "Foltyn, Andreas", email = "andreas.foltyn@iis.fraunhofer.de" }
]
readme = "README.md"
license = { text = "Software Copyright License for Academic Use of the Fraunhofer Software, Version 1.0" }

requires-python = ">=3.9"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "distro==1.9.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonargparse==4.35.0",
    "numpy==2.2.0",
    "openai==1.58.1",
    "pydantic==2.10.3",
    "PyYAML==6.0.2",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "threadpoolctl==3.5.0",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
]

[project.urls]
"Repository" = "https://github.com/Fraunhofer-IIS/RAGonite"

[tool.setuptools.packages.find]
where = ["src"]